# docs/swagger.json
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Result"
+                            "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.PageResult-github_com_jasonbourne723_iam_internal_dto_UserDto"
                         }
                     }
                 }
@@ -59,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateUserDto"
+                            "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.UpdateUserDto"
                         }
                     }
                 ],
@@ -67,7 +67,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Result"
+                            "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.Result"
                         }
                     }
                 }
@@ -90,7 +90,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.AddUserDto"
+                            "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.AddUserDto"
                         }
                     }
                 ],
@@ -98,7 +98,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Result"
+                            "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.Result"
                         }
                     }
                 }
@@ -129,7 +129,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Result"
+                            "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.Result"
                         }
                     }
                 }
@@ -137,7 +137,7 @@
         }
     },
     "definitions": {
-        "dto.AddUserDto": {
+        "github_com_jasonbourne723_iam_internal_dto.AddUserDto": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -152,12 +152,12 @@
                 "roles": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.RoleDto"
+                        "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.RoleDto"
                     }
                 }
             }
         },
-        "dto.AppDto": {
+        "github_com_jasonbourne723_iam_internal_dto.AppDto": {
             "type": "object",
             "properties": {
                 "appId": {
@@ -174,7 +174,30 @@
                 }
             }
         },
-        "dto.Result": {
+        "github_com_jasonbourne723_iam_internal_dto.PageResult-github_com_jasonbourne723_iam_internal_dto_UserDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.UserDto"
+                    }
+                },
+                "pageIndex": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "totalPage": {
+                    "type": "integer"
+                },
+                "totalRows": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_jasonbourne723_iam_internal_dto.Result": {
             "type": "object",
             "properties": {
                 "code": {
@@ -185,13 +208,13 @@
                 }
             }
         },
-        "dto.RoleDto": {
+        "github_com_jasonbourne723_iam_internal_dto.RoleDto": {
             "type": "object",
             "properties": {
                 "apps": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.AppDto"
+                        "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.AppDto"
                     }
                 },
                 "id": {
@@ -202,7 +225,7 @@
                 }
             }
         },
-        "dto.UpdateUserDto": {
+        "github_com_jasonbourne723_iam_internal_dto.UpdateUserDto": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -220,7 +243,30 @@
                 "roles": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.RoleDto"
+                        "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.RoleDto"
+                    }
+                }
+            }
+        },
+        "github_com_jasonbourne723_iam_internal_dto.UserDto": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "remark": {
+                    "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_jasonbourne723_iam_internal_dto.RoleDto"
                     }
                 }
             }
